price tag alignment issue fixed in TCL-264

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_plp.scss
@@ -236,8 +236,12 @@
 						text-decoration: line-through;
 						margin-right:10px;
 					}
-					span.sale-price{
+					span.savings{
 						color:#da3549;
+					}
+                    span.sale-price{
+						float: right;
+                        text-align: right;
 					}
 				}
 			}
